//
// Copyright (c) 2025 Red Hat, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
// the License. You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
// an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
// specific language governing permissions and limitations under the License.
//

syntax = "proto3";

package tests.v1;

import "google/protobuf/timestamp.proto";
import "shared/v1/metadata_type.proto";

// This is an object type used in unit tests.
message Object {
  // Unique identifier of the object.
  string id = 1;

  // Metadata of the object.
  shared.v1.Metadata metadata = 2;

  // Miscellanea fields used in tests.
  bool my_bool = 3;
  int32 my_int32 = 4;
  int64 my_int64 = 5;
  string my_string = 6;
  float my_float = 7;
  double my_double = 8;
  google.protobuf.Timestamp my_timestamp = 9;
  bytes my_bytes = 10;
  Object my_msg = 11;
  repeated Object my_repeated = 12;
  map<string, Object> my_map = 13;
  string ignore = 14;

  // Spec and status:
  Spec spec = 15;
  Status status = 16;
}

message Spec {
  bool spec_bool = 1;
  int32 spec_int32 = 2;
  int64 spec_int64 = 3;
  string spec_string = 4;
  float spec_float = 5;
  double spec_double = 6;
  bytes spec_bytes = 7;
  google.protobuf.Timestamp spec_timestamp = 8;
  string ignore = 9;
}

message Status {
  bool status_bool = 1;
  int32 status_int32 = 2;
  int64 status_int64 = 3;
  string status_string = 4;
  float status_float = 5;
  double status_double = 6;
  bytes status_bytes = 7;
  google.protobuf.Timestamp status_timestamp = 8;
}
